# VibeWorking

./: .gitignore  BUGFIX_WINDOWSERVER_CRASH.md  CLAUDE.md  EMBEDDING_ACCURACY_TEST.md  EMBEDDING_IMPLEMENTATION.md  EMBEDDING_QUANTIZATION.md  EMBEDDING_QUANTIZATION_REPORT.md  EMBEDDING_VERIFICATION.md  RAG功能实现完成.md  README.md  STARTUP_GUIDE.md  start.sh  start_rag_service.sh  test_rag.sh  test_rag_interactive.py  代码解读文档.md  实现总结.md  技术方案.md  本地知识库生成方案.md  本地自测文档.md  生成顺序.md  知识提炼优化总结.md  知识提炼功能实现总结.md  知识提炼功能测试报告.md
.claude/: MEMORY.md  settings.local.json
ai-sidecar/: KNOWLEDGE_V2_SETUP.md  Modelfile  background_processor.py  debug_paddle_output.py  debug_ui.py  dispatcher.py  dispatcher_v2.py  idle_compute_example.py  knowledge_api_server.py  main.py  main_v2.py  model_api_server.py  model_manager.py  model_registry.py  pyproject.toml  rag_api_server.py  requirements.txt  run_migration.py  scheduled_task_executor.py  start_debug_ui.py  start_rag_service.sh  startup_checks.py  task_executor_server.py  test_batch_vectorize.py  test_embedding_accuracy.py  test_ocr_config.py  test_ocr_safe.py  test_rag_imports.py  test_vectorize.py
ai-sidecar/asr/: __init__.py  backend.py  model.py  whisper.py  worker.py
ai-sidecar/embedding/: __init__.py  base.py  bge.py  model.py  ollama.py  vector_storage.py  worker.py
ai-sidecar/idle_compute/: __init__.py  engine.py  idle_detector.py  model_manager.py  task_scheduler.py
ai-sidecar/knowledge/: __init__.py  api.py  extractor.py  extractor_v2.py  fragment_grouper.py  manager.py
ai-sidecar/migrations/: 004_add_overview_details.sql  005_fragment_and_scheduled_tasks.sql
ai-sidecar/monitor/: llm_tracker.py  system_sampler.py
ai-sidecar/ocr/: __init__.py  engine.py  worker.py
ai-sidecar/ocr/backends/: __init__.py  base.py  paddle.py  vision.py  vision_pyobjc.py
ai-sidecar/ocr/swift-ocr/: main.swift
ai-sidecar/rag/: README.md  __init__.py  embedding.py  ipc_handler.py  llm_client.py  pipeline.py  profile_analyzer.py  qdrant_manager.py  rag_server.py  requirements.txt  reranker.py  retriever.py  retriever.py.backup  worker.py
ai-sidecar/rag/llm/: __init__.py  base.py  ollama.py  openai_compat.py
ai-sidecar/tests/: conftest.py  test_asr_vlm.py  test_backends.py  test_background_processor.py  test_bake_extractor.py  test_dispatcher.py  test_embedding.py  test_engine.py  test_knowledge.py  test_knowledge_mock.py  test_manual.py  test_rag.py  test_worker.py
ai-sidecar/vlm/: __init__.py  backend.py  minicpm.py  model.py  worker.py
core-engine/: Cargo.toml
core-engine/src/: ipc.rs  lib.rs  main.rs  monitor.rs
core-engine/src/api/: error.rs  mod.rs  server.rs  state.rs
core-engine/src/api/handlers/: action.rs  bake.rs  captures.rs  debug.rs  health.rs  knowledge.rs  mod.rs  monitor.rs  pii.rs  preferences.rs  profile.rs  query.rs  tasks.rs
core-engine/src/capture/: ax.rs  engine.rs  filter.rs  listener.rs  mod.rs  screenshot.rs
core-engine/src/executor/: action.rs  error.rs  executor.rs  mod.rs
core-engine/src/scheduler/: mod.rs  models.rs  profile_task.rs  repo.rs  runner.rs
core-engine/src/services/: bake_service.rs
core-engine/src/storage/: cleanup.rs  db.rs  error.rs  mod.rs  models.rs  models_bake.rs
core-engine/src/storage/migrations/: 001_init.sql  002_seed_defaults.sql  003_views.sql  014_add_knowledge_timestamp_ms.sql  015_split_knowledge_tables.sql  019_rename_to_timelines.sql  020_add_detailed_content.sql  021_unify_bake_designs.sql  022_fix_bake_fts_delete_triggers.sql  023_rename_bake_run_design_count.sql
core-engine/src/storage/repo/: action_log.rs  bake_design.rs  capture.rs  knowledge.rs  mod.rs  preferences.rs  rag_session.rs  style_sample.rs  user_profile.rs  vector_index.rs
core-engine/tests/: api_tests.rs
desktop-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
desktop-ui/src-tauri/icons/: icon.icns  icon.png.base64
doc/: AI模型内存管理优化方案.md  AI模型功能说明与优化建议.md  DESIGN_GUIDELINES.md  LLM模型分析与优化方案.md  MiniCPM-V_vs_Qwen2-VL对比分析.md  RAG功能实现完成.md  README.md  STARTUP_GUIDE.md  代码解读文档.md  性能优化实施报告.md  性能优化方案.md  技术方案.md  本地知识库生成方案.md  监控指标口径说明.md  知识库功能优化完成.md  知识提炼优化总结.md  调试界面使用指南.md  调试界面日志功能说明.md  闲时检测器优化方案.md  闲时计算架构设计方案.md  闲时计算系统实现总结.md  闲时计算集成完成.md
log/: STARTUP_SUCCESS.txt
shared/ipc-protocol/python/: message.py  pyproject.toml  transport.py
shared/ipc-protocol/python/memory_bread_ipc/: __init__.py  message.py  transport.py
shared/ipc-protocol/python/workbuddy_ipc/: __init__.py
shared/ipc-protocol/rust/: Cargo.toml
shared/ipc-protocol/rust/src/: error.rs  lib.rs  message.rs  transport.rs
static/: logo_bigeye_noname_psd
test/: test-debug-panel.sh  test-system.sh  test_apple_vision_ocr.py  test_ocr_integration.py  test_paddle_direct.py  test_vision_pyobjc.py
vibe_record/: ACCESSIBILITY_AND_OCR_CONFIG.md  CAPTURE_FIXED.md  DEBUG_PANEL_FIXED.md  DEBUG_PANEL_TEXT_DISPLAY.md  DESKTOP_UI_OPTIMIZATION.md  OCR_IMPLEMENTATION_REPORT.md  OCR_IMPLEMENTATION_STATUS.md  OCR_INTEGRATION_VERIFICATION.md  OCR_MODEL_SELECTION.md  OCR_SOLUTION_REDESIGN.md  START_SCRIPT_FIXED.md  START_SCRIPT_PORT_FIX.md  TEXT_CAPTURE_GUIDE.md  USAGE_GUIDE.md  WORKBUDDY_STARTUP_TEST_SUMMARY.md
(+58 files in other folders)
