[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name            = "memory-bread-sidecar"
version         = "0.1.0"
description     = "记忆面包 AI 推理 Sidecar（OCR / ASR / VLM / Embedding / RAG）"
requires-python = ">=3.11"
dependencies    = [
    "memory-bread-ipc",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
pythonpath   = ["."]        # 让 pytest 能找到 ocr/, dispatcher.py 等顶层模块
