[package]
name = "workbuddy-desktop"
version = "0.1.0"
description = "WorkBuddy Desktop Application"
authors = ["WorkBuddy Team"]
edition = "2021"

[lib]
name = "workbuddy_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
