[package]
name = "memory-bread-desktop"
version = "0.1.0"
description = "记忆面包 Desktop Application"
authors = ["记忆面包 Team"]
edition = "2021"

[lib]
name = "memory_bread_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
