[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name            = "memory-bread-ipc"
version         = "0.1.0"
description     = "记忆面包 IPC 协议：Rust Core Engine ↔ Python AI Sidecar"
requires-python = ">=3.11"
dependencies    = ["pydantic>=2.0"]

# memory_bread_ipc/ 子目录即为包，setuptools 自动发现
[tool.setuptools.packages.find]
where = ["."]
