[package]
name        = "workbuddy-ipc"
version     = "0.1.0"
edition     = "2021"
description = "WorkBuddy IPC protocol types and transport — shared between core-engine and other Rust crates"

[dependencies]
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
tokio      = { version = "1",   features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }
uuid       = { version = "1",   features = ["v4"] }
thiserror  = "1"
tracing    = "0.1"
bytes      = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
